Index CV proyecto final.

--- a/index.html
+++ b/index.html
@@ -5,24 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos.css">
+
     <title>Proyecto final CV</title>
-    <link rel="stylesheet" href="index.html">
-</head>
-<style>
-    h2 {
-        color: dimgray;
-    }
-</style>
 
-<body>
+    </ </head>
 
-    <header><img src="https://randomuser.me/api/portraits/men/35.jpg"></header>
-    <h1>CASA JUAN MANUEL</h1>
+    <body>
 
-    <h2>Telefono de contacto: 0343-1550303456</h2>
+        <header><img src="https://randomuser.me/api/portraits/men/35.jpg"></header>
+        <h1>CASA JUAN MANUEL</h1>
 
-    <h2>Correo electronico: juan123@gmail.com</h2>
-    < <h3>PERFIL</h3>
+        <h2>Telefono de contacto: 0343-1550303456</h2>
+
+        <h2>Correo electronico: juan123@gmail.com</h2>
+        <h3>PERFIL</h3>
         <p>Soy una persona con amplia experiencia en administración de empresas, muy capaz, entusiasta y activa. Estoy buscando una oportunidad para continuar desarrollando mis habilidades y aprendiendo sobre administración de negocios.</p>
 
         <h3>EXPERIENCIA LABORAL</h3>
@@ -47,6 +44,7 @@
         <h5>*Liderazgo</h5>
         <h5>Gran sentido de la responsabilidad</h5>
 
-</body>
+        <body>
+
 
 </html>
