index proyecto final ok

--- a/index.html
+++ b/index.html
@@ -6,45 +6,63 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
     <title>Proyecto final CV</title>
 
-    </ </head>
+</head>
 
-    <body>
+<body>
+    <div class="contenedor">
 
-        <header><img src="https://randomuser.me/api/portraits/men/35.jpg"></header>
-        <h1>CASA JUAN MANUEL</h1>
-
-        <h2>Telefono de contacto: 0343-1550303456</h2>
-
-        <h2>Correo electronico: juan123@gmail.com</h2>
-        <h3>PERFIL</h3>
-        <p>Soy una persona con amplia experiencia en administración de empresas, muy capaz, entusiasta y activa. Estoy buscando una oportunidad para continuar desarrollando mis habilidades y aprendiendo sobre administración de negocios.</p>
-
-        <h3>EXPERIENCIA LABORAL</h3>
-
-        <h4>Gerente Administrativo</h4>
-        <h5>Deltafarma SRL-2019/Presente</h5>
-        <h5>*Administración de más de 18 sucursales</h5>
-
-        <h4>Gerente Administrativo</h4>
-        <h5>Congelar SRL-2015/2019</h5>
-        <h5>*Gestión administrativa de la empresa</h5>
+        <div class="top">
+            <header><img src="https://randomuser.me/api/portraits/men/35.jpg"></header>
+            <h1>CASA JUAN MANUEL</h1>
+            <p>Telefono de contacto: 0343-1550303456 <br> Correo electronico: juan123@gmail.com</p>
+        </div>
 
 
-        <h3>FORMACION ACADEMICA</h3>
-        <H5>Licenciado en Enseñanza-Química: imcompleto</H5>
+        <div class="content">
 
-        <h3>HABILIDADES PROFESIONALES</h3>
-        <H5>Microsoft Office</H5>
-        <h5>Ingles: Nivel Avanzado</h5>
 
-        <h3>HABILIDADES PERSONALES</h3>
-        <h5>*Liderazgo</h5>
-        <h5>Gran sentido de la responsabilidad</h5>
 
-        <body>
+            <h3><i class="fa-solid fa-check"></i> PERFIL
+            </h3>
+            <p>Soy una persona con amplia experiencia en administración de empresas, muy capaz, entusiasta y activa. Estoy buscando una oportunidad para continuar desarrollando mis habilidades y aprendiendo sobre administración de negocios.</p>
+
+            <h3><i class="fa-solid fa-check"></i> EXPERIENCIA LABORAL</h3>
+
+            <h4>Gerente Administrativo</h4>
+            <h5>Deltafarma SRL-2019/Presente</h5>
+            <h5>*Administración de más de 18 sucursales</h5>
+
+            <h4>Gerente Administrativo</h4>
+            <h5>Congelar SRL-2015/2019</h5>
+            <h5>*Gestión administrativa de la empresa</h5>
+
+
+            <h3><i class="fa-solid fa-check"></i> FORMACION ACADEMICA</h3>
+            <H5>Licenciado en Enseñanza-Química: imcompleto</H5>
+
+            <h3><i class="fa-solid fa-check"></i> HABILIDADES PROFESIONALES</h3>
+            <H5>Microsoft Office</H5>
+            <h5>Ingles: Nivel Avanzado</h5>
+
+            <h3><i class="fa-solid fa-check"></i> HABILIDADES PERSONALES</h3>
+            <h5>*Liderazgo</h5>
+            <h5>Gran sentido de la responsabilidad</h5>
+
+
+            <audio controls autoplay="1">
+  <source src="audio/audio.ogg" type="audio/ogg">
+Your browser does not support the audio element.
+</audio>
+
+
+        </div>
+
+
+</body>
 
 
 </html>
